fix double margin of p tags

--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -111,6 +111,7 @@ Until I almost finish soldering diodes for the first side, I found [this video o
 And Soldering Paste is a game changer for me.
 
 <Picture
+  class="mx-auto"
   src={import('./images/relife-soldering-paste.jpg')}
   alt="Relife soldering paste 183c"
   widths={[400,800,1600]}
